@@ -11,7 +11,8 @@ enum INSTYPE {    /*instruction type can be   */
     ITSPILL = 0x400000, /*   set P31,x ; set x, p31 spilling */
     ITEXT   = 0x800000, /*   instruction is extcall in JIT */
     ITSAVES = 0x1000000,  /*   saveall/restoreall in a bsr */
-    ITPCCSUB = 0x2000000  /*  PCC sub call */
+    ITPCCSUB = 0x2000000,  /*  PCC sub call */
+    ITPCCYIELD = 0x4000000 /* yield from PCC call instead of return */
 };
 
 
